--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <input type='hidden' name='sid1' value='adwords' />
         <input type='hidden' name='sid2' value='and' />
         <input type='hidden' name='sid3' value='001' />
-      <input type='hidden' name='redirect_url' value='https://primestore.host/primary/urotrin_hungary/success/index.html' />
+      <input type='hidden' name='redirect_url' value='https://health-nature.github.io/Normalife-Italy/success/index.html' />
 						</form>
 						</div>
 						<ul class="sec_data_base">
@@ -118,7 +118,7 @@
         <input type='hidden' name='sid1' value='adwords' />
         <input type='hidden' name='sid2' value='and' />
         <input type='hidden' name='sid3' value='001' />
-      <input type='hidden' name='redirect_url' value='https://primestore.host/primary/urotrin_hungary/success/index.html' />
+      <input type='hidden' name='redirect_url' value='https://health-nature.github.io/Normalife-Italy/success/index.html' />
 						</form>
 						</div>
 						<ul class="sec_data_base">
@@ -311,7 +311,7 @@
         <input type='hidden' name='sid1' value='adwords' />
         <input type='hidden' name='sid2' value='and' />
         <input type='hidden' name='sid3' value='001' />
-      <input type='hidden' name='redirect_url' value='https://primestore.host/primary/urotrin_hungary/success/index.html' />
+      <input type='hidden' name='redirect_url' value='https://health-nature.github.io/Normalife-Italy/success/index.html' />
 						</form>
 						</div>
 						<ul class="sec_data_base sec_data_base1">
@@ -348,7 +348,7 @@
         <input type='hidden' name='sid1' value='adwords' />
         <input type='hidden' name='sid2' value='and' />
         <input type='hidden' name='sid3' value='001' />
-      <input type='hidden' name='redirect_url' value='https://primestore.host/primary/urotrin_hungary/success/index.html' />
+      <input type='hidden' name='redirect_url' value='https://health-nature.github.io/Normalife-Italy/success/index.html' />
 					</form>
 					</div>
 					<ul class="sec_data_base">
@@ -483,7 +483,7 @@
         <input type='hidden' name='sid1' value='adwords' />
         <input type='hidden' name='sid2' value='and' />
         <input type='hidden' name='sid3' value='001' />
-      <input type='hidden' name='redirect_url' value='https://primestore.host/primary/urotrin_hungary/success/index.html' />
+      <input type='hidden' name='redirect_url' value='https://health-nature.github.io/Normalife-Italy/success/index.html' />
 						</form>
 						</div>
 						<ul class="sec_data_base sec_data_base1">
@@ -520,7 +520,7 @@
         <input type='hidden' name='sid1' value='adwords' />
         <input type='hidden' name='sid2' value='and' />
         <input type='hidden' name='sid3' value='001' />
-      <input type='hidden' name='redirect_url' value='https://primestore.host/primary/urotrin_hungary/success/index.html' />
+      <input type='hidden' name='redirect_url' value='https://health-nature.github.io/Normalife-Italy/success/index.html' />
 					</form>
 					</div>
 					<ul class="sec_data_base">
@@ -570,7 +570,7 @@
         <input type='hidden' name='sid1' value='adwords' />
         <input type='hidden' name='sid2' value='and' />
         <input type='hidden' name='sid3' value='001' />
-      <input type='hidden' name='redirect_url' value='https://primestore.host/primary/urotrin_hungary/success/index.html' />
+      <input type='hidden' name='redirect_url' value='https://health-nature.github.io/Normalife-Italy/success/index.html' />
 						</form>
 						</div>
 						<ul class="sec_data_base sec_data_base1">
